--- a/srv/http/assets/css/info.css
+++ b/srv/http/assets/css/info.css
@@ -470,6 +470,7 @@ px100 { width: 100px }
 	#infoX:hover {
 		color: var( --cml );
 	}
+	#infoContent label,
 	input[type=checkbox],
 	input[type=radio],
 	.fa-eye {
