--- a/srv/http/assets/css/common.css
+++ b/srv/http/assets/css/common.css
@@ -142,6 +142,7 @@ input::-moz-focus-inner {
 .fa-lastfm::before { content: "\f585" }
 .fa-lcd::before { content: "\f577" }
 .fa-lcdchar::before { content: "\f578" }
+.fa-led::before { content: "\f52B" }
 .fa-library::before { content: "\f506" }
 .fa-lock::before { content: "\f574"; }
 .fa-lyrics::before { content: "\f54B" }
