--- a/srv/http/assets/css/common.css
+++ b/srv/http/assets/css/common.css
@@ -64,22 +64,19 @@ input::-moz-focus-inner {
 }
 @font-face {
 	font-family: Lato;
-	src: url( '/assets/fonts/lato-regular-webfont.woff' ) format( 'woff' ),
-	     url( '/assets/fonts/lato-regular-webfont.ttf' ) format( 'truetype' );
+	src: url( '/assets/fonts/Lato-Regular.woff2' ) format( 'woff2' );
 	font-weight: normal;
 	font-style: normal;
 }
 @font-face {
 	font-family: Lato;
-	src: url( '/assets/fonts/lato-light-webfont.woff' ) format( 'woff' ),
-	     url( '/assets/fonts/lato-light-webfont.ttf' ) format( 'truetype' );
+	src: url( '/assets/fonts/Lato-Light.woff2' ) format( 'woff2' );
 	font-weight: 300;
 	font-style: normal;
 }
 @font-face {
 	font-family: Inconsolata;
-	src: url('/assets/fonts/Inconsolata.woff') format('woff'),
-	     url( '/assets/fonts/Inconsolata.ttf' ) format( 'truetype' );
+	src: url('/assets/fonts/Inconsolata.woff2') format('woff2');
 	font-weight: normal;
 	font-style: normal;
 }
