--- a/srv/http/assets/css/addons.css
+++ b/srv/http/assets/css/addons.css
@@ -17,7 +17,7 @@ hr {
 }
 @media(max-width: 540px) {
 	.container {
-		padding: 0 10px 15px 10px;
+		padding: 40px 10px 15px 10px;
 	}
 	.boxed-group {
 		padding: 10px !important;
