--- a/srv/http/assets/css/info.css
+++ b/srv/http/assets/css/info.css
@@ -352,7 +352,7 @@ hr {
 	-webkit-appearance: none;
 	width: 24px;
 	height: 24px;
-	margin: 3px 6px 3px 0;
+	margin: 3px 6px 3px 1px;
 	vertical-align: -10px;
 	border: none;
 	border-radius: 3px;
@@ -362,7 +362,7 @@ hr {
 	width: 26px;
 	height: 26px;
 	border-radius: 50%;
-	margin: 2px 7px 2px 0;
+	margin: 2px 7px 2px 1px;
 }
 #infoOverlay input:checked {
 	background-color: var( --cm );
