--- a/srv/http/assets/css/main.css
+++ b/srv/http/assets/css/main.css
@@ -1382,7 +1382,7 @@ i.map.disabled, .map.disabled i {
 	width: 100%;
 	height: 40px;
 	background: var( --cga );
-	top: 0;
+	top: 40px;
 	padding-right: 10px;
 	z-index: 104;
 }
