--- a/srv/http/assets/css/settings.css
+++ b/srv/http/assets/css/settings.css
@@ -130,6 +130,7 @@ heading i {
 	font-size: 22px;
 	text-align: center;
 	color: var( --cg60 );
+	letter-spacing: normal;
 }
 heading i.back {
 	width: 40px;
@@ -138,7 +139,6 @@ heading i.fa-question-circle {
 	float: right;
 	width: 40px;
 	font-size: 20px;
-	text-align: center;
 }
 .head {
 	position: fixed;
