--- a/srv/http/assets/css/main.css
+++ b/srv/http/assets/css/main.css
@@ -2072,72 +2072,6 @@ li.active .li2 bl {
 	line-height: 34px;
 	background-color: var( --cm );
 }
-@media(min-width: 2038px) { .coverart { width: 200px } }
-@media(max-width: 2038px) { .lib-mode, .coverart { width: calc( 100% / 10 ) } }
-@media(max-width: 1838px) { .lib-mode, .coverart { width: calc( 100% / 9 ) } }
-@media(max-width: 1638px) { .lib-mode, .coverart { width: calc( 100% / 8 ) } }
-@media(max-width: 1438px) { .lib-mode, .coverart { width: calc( 100% / 7 ) } }
-@media(max-width: 1238px) { .lib-mode, .coverart { width: calc( 100% / 6 ) } }
-@media(max-width: 1038px) { .lib-mode, .coverart { width: calc( 100% / 5 ) } }
-@media(max-width: 838px)  { .coverart { width: calc( 100% / 4 ) } }
-@media(max-width: 638px)  { .coverart { width: calc( 100% / 3 ) } }
-@media(max-width: 438px)  { .coverart { width: calc( 100% / 2 ) } }
-
-@media(max-width: 540px)  { .lib-mode { width: calc( 100% / 4 ) } }
-@media(max-width: 440px)  { .lib-mode { width: calc( 100% / 3 ) } }
-@media(max-width: 340px)  { .mode grl { display: none } }
-
-/* scale */
-@media( orientation: landscape ) and ( max-height: 480px ) {
-	#page-playback { padding: 40px 0 !important; }
-	#page-playback.barsalways { padding: 60px 0 60px !important }
-	#page-playback {
-		transform-origin: 0 0;
-		transform: scale( var(--scale) );
-		width: calc( 100% / var(--scale) );
-		height: calc( 100% / var(--scale) );
-	}
-}
-@media( orientation: landscape ) and ( max-height: 440px ) {
-	#page-playback { --scale: 0.98 }
-	#page-playback.barsalways { --scale: 0.9 }
-}
-@media( orientation: landscape ) and ( max-height: 420px ) {
-	#page-playback { --scale: 0.95 }
-	#page-playback.barsalways { --scale: 0.85 }
-}
-@media( orientation: landscape ) and ( max-height: 400px ) {
-	#page-playback { --scale: 0.9 }
-	#page-playback.barsalways { --scale: 0.8 }
-}
-@media( orientation: landscape ) and ( max-height: 380px ) {
-	#page-playback { --scale: 0.85 }
-	#page-playback.barsalways { --scale: 0.75; padding: 80px 0 0 !important; }
-}
-@media( orientation: landscape ) and ( max-height: 360px ) {
-	#page-playback { --scale: 0.8 }
-	#page-playback.barsalways { --scale: 0.7 }
-}
-@media( orientation: landscape ) and ( max-height: 340px ) {
-	#page-playback { --scale: 0.75 }
-	#page-playback.barsalways { --scale: 0.65 }
-}
-
-@media( orientation: landscape ) and ( max-width: 768px ) {
-	#page-playback { --scale: 0.95 }
-}
-@media( orientation: landscape ) and ( max-width: 700px ) {
-	#page-playback { --scale: 0.9 }
-}
-@media( orientation: landscape ) and ( max-width: 670px ) {
-	#page-playback { --scale: 0.85 }
-}
-@media( orientation: landscape ) and ( max-width: 630px ) {
-	#page-playback { --scale: 0.8 }
-}
-@media( orientation: landscape ) and ( max-width: 590px ) {
-	#page-playback { --scale: 0.75 }
-}
 
 @media( max-height: 768px ) {
 	#page-playback {
@@ -2182,213 +2116,273 @@ li.active .li2 bl {
 	#pl-count,
 	#pl-path { display: none; }
 }
-/* landscape */
-@media( orientation: landscape ) and ( max-height: 767px ) {
-	.licover {
-		position: relative;
+
+@media (min-width: 2038px) { .coverart { width: 200px } }
+@media (max-width: 2038px) { .lib-mode, .coverart { width: calc( 100% / 10 ) } }
+@media (max-width: 1838px) { .lib-mode, .coverart { width: calc( 100% / 9 ) } }
+@media (max-width: 1638px) { .lib-mode, .coverart { width: calc( 100% / 8 ) } }
+@media (max-width: 1438px) { .lib-mode, .coverart { width: calc( 100% / 7 ) } }
+@media (max-width: 1238px) { .lib-mode, .coverart { width: calc( 100% / 6 ) } }
+@media (max-width: 1038px) { .lib-mode, .coverart { width: calc( 100% / 5 ) } }
+@media (max-width: 838px)  { .coverart { width: calc( 100% / 4 ) } }
+@media (max-width: 638px)  { .coverart { width: calc( 100% / 3 ) } }
+@media (max-width: 438px)  { .coverart { width: calc( 100% / 2 ) } }
+
+@media (max-width: 540px)  { .lib-mode { width: calc( 100% / 4 ) } }
+@media (max-width: 440px)  { .lib-mode { width: calc( 100% / 3 ) } }
+@media (max-width: 340px)  { .mode grl { display: none } }
+
+@media( orientation: landscape ) {
+	@media( max-height: 480px ) {
+		#page-playback { padding: 40px 0 !important; }
+		#page-playback.barsalways { padding: 60px 0 60px !important }
+		#page-playback {
+			transform-origin: 0 0;
+			transform: scale( var(--scale) );
+			width: calc( 100% / var(--scale) );
+			height: calc( 100% / var(--scale) );
+		}
 	}
-	#lib-list li.track1 {
-		margin-top: 0;
+	@media ( max-height: 440px ) {
+		#page-playback { --scale: 0.98 }
+		#page-playback.barsalways { --scale: 0.9 }
 	}
-}
-@media( orientation: landscape ) and ( max-height: 540px ) {
-	#page-playback.barshidden {
-		padding: 60px 0 20px;
+	@media ( max-height: 420px ) {
+		#page-playback { --scale: 0.95 }
+		#page-playback.barsalways { --scale: 0.85 }
 	}
-}
-@media( orientation: landscape ) and ( max-height: 480px ) {
-	#settings {
-		position: absolute;
+	@media ( max-height: 400px ) {
+		#page-playback { --scale: 0.9 }
+		#page-playback.barsalways { --scale: 0.8 }
 	}
-	#playback-row {
-		margin-top: 10px;
+	@media ( max-height: 380px ) {
+		#page-playback { --scale: 0.85 }
+		#page-playback.barsalways { --scale: 0.75; padding: 80px 0 0 !important; }
 	}
-	#time-knob,
-	#coverart-block,
-	#volume-knob {
-		width: 30%;
-		min-width: 30%;
-		margin: 0 10px;
+	@media ( max-height: 360px ) {
+		#page-playback { --scale: 0.8 }
+		#page-playback.barsalways { --scale: 0.7 }
 	}
-	#coverart-block { margin-top: -20px; }
-	#play-group,
-	#vol-group {
-		display: none;
+	@media ( max-height: 340px ) {
+		#page-playback { --scale: 0.75 }
+		#page-playback.barsalways { --scale: 0.65 }
 	}
-	#dot0 {
-		display: inline;
+
+	@media ( max-width: 768px ) { #page-playback { --scale: 0.95 } }
+	@media ( max-width: 700px ) { #page-playback { --scale: 0.9 } }
+	@media ( max-width: 670px ) { #page-playback { --scale: 0.85 } }
+	@media ( max-width: 630px ) { #page-playback { --scale: 0.8 } }
+	@media ( max-width: 590px ) { #page-playback { --scale: 0.75 } }
+	
+	@media ( max-height: 767px ) {
+		.licover {
+			position: relative;
+		}
+		#lib-list li.track1 {
+			margin-top: 0;
+		}
 	}
-}
-/* portrait */
-@media( orientation: portrait ) and ( max-width: 1200px ) {
-	#playback-row {
-		max-width: 100vw;
+	@media ( max-height: 540px ) {
+		#page-playback.barshidden {
+			padding: 60px 0 20px;
+		}
 	}
-}
-@media( orientation: portrait ) and ( max-width: 749px ) {
-	#time-knob,
-	#volume-knob,
-	#play-group,
-	#vol-group	{
-		min-width: 55%;
-	}
-	#time-knob,
-	#volume-knob {
-		margin: 0 0 20px 0;
-	}
-	#time-knob {
-		order: 2;
-		-webkit-order: 2;
-		margin-top: 20px;
-	}
-	#coverart-block {
-		order: 1;
-		-webkit-order: 1;
-		display: block;
-		min-width: 75%;
-		margin: 0 0 20px 0;
-	}
-	#volume-knob {
-		order: 3;
-		-webkit-order: 3;
-	}
-}
-@media( orientation: portrait ) and ( max-width: 735px ) {
-	.title {
-		display: none;
-	}
-}
-@media( orientation: portrait ) and ( max-width: 700px ) {
-	.liinfo {
-		display: none;
-	}
-	#time-knob,
-	#volume-knob,
-	#play-group,
-	#vol-group	{
-		min-width: 55%;
-	}
-	#time-knob,
-	#coverart-block,
-	#volume-knob {
-		width: auto;
-	}
-	#time-knob {
-		order: 2;
-		-webkit-order: 2;
-	}
-	#coverart-block {
-		order: 1;
-		-webkit-order: 1;
-		display: block;
-		min-width: 75%;
-	}
-	#volume-knob {
-		order: 3;
-		-webkit-order: 3;
-		margin-bottom: 70px;
+	@media ( max-height: 480px ) {
+		#settings {
+			position: absolute;
+		}
+		#playback-row {
+			margin-top: 10px;
+		}
+		#time-knob,
+		#coverart-block,
+		#volume-knob {
+			width: 30%;
+			min-width: 30%;
+			margin: 0 10px;
+		}
+		#coverart-block { margin-top: -20px; }
+		#play-group,
+		#vol-group {
+			display: none;
+		}
+		#dot0 {
+			display: inline;
+		}
 	}
 }
-@media( orientation: portrait ) and ( max-width: 614px ) {
-	#time-knob { display: none; }
-	#volume-knob { margin-top: 40px; }
-}
-@media( orientation: portrait ) and ( max-width: 540px ) {
-	#playback-row {
-		margin-top: 20px;
+
+@media( orientation: portrait ) {
+	@media ( max-width: 1200px ) {
+		#playback-row {
+			max-width: 100vw;
+		}
 	}
-	#coverart-block,
-	.coverlarge {
-		width: 100% !important;
+	@media ( max-width: 749px ) {
+		#time-knob,
+		#volume-knob,
+		#play-group,
+		#vol-group	{
+			min-width: 55%;
+		}
+		#time-knob,
+		#volume-knob {
+			margin: 0 0 20px 0;
+		}
+		#time-knob {
+			order: 2;
+			-webkit-order: 2;
+			margin-top: 20px;
+		}
+		#coverart-block {
+			order: 1;
+			-webkit-order: 1;
+			display: block;
+			min-width: 75%;
+			margin: 0 0 20px 0;
+		}
+		#volume-knob {
+			order: 3;
+			-webkit-order: 3;
+		}
 	}
-	#coverart-block,
-	#divcover {
-		max-width: 100vw !important;
+	@media ( max-width: 735px ) {
+		.title {
+			display: none;
+		}
 	}
-}
-@media( orientation: portrait ) and ( max-width: 500px ) {
-	#dot0 {
-		display: inline;
+	@media ( max-width: 700px ) {
+		.liinfo {
+			display: none;
+		}
+		#time-knob,
+		#volume-knob,
+		#play-group,
+		#vol-group	{
+			min-width: 55%;
+		}
+		#time-knob,
+		#coverart-block,
+		#volume-knob {
+			width: auto;
+		}
+		#time-knob {
+			order: 2;
+			-webkit-order: 2;
+		}
+		#coverart-block {
+			order: 1;
+			-webkit-order: 1;
+			display: block;
+			min-width: 75%;
+		}
+		#volume-knob {
+			order: 3;
+			-webkit-order: 3;
+			margin-bottom: 70px;
+		}
 	}
-}
-@media( orientation: portrait ) and ( max-width: 480px ) {
-	#playback-controls i {
-		margin: 0 5px;
+	@media ( max-width: 614px ) {
+		#time-knob { display: none; }
+		#volume-knob { margin-top: 40px; }
 	}
-	#lib-list li span .fa,
-	#pl-savedlist span::before {
-		display: none;
+	@media ( max-width: 540px ) {
+		#playback-row {
+			margin-top: 20px;
+		}
+		#coverart-block,
+		.coverlarge {
+			width: 100% !important;
+		}
+		#coverart-block,
+		#divcover {
+			max-width: 100vw !important;
+		}
 	}
-	#lib-list li {
-		line-height: 52px;
+	@media ( max-width: 500px ) {
+		#dot0 {
+			display: inline;
+		}
 	}
-	#lib-list .li1,
-	#pl-list .li1,
-	#pl-savedlist span,
-	.time {
-		font-size: 16px;
-		line-height: 19px;
+	@media ( max-width: 480px ) {
+		#playback-controls i {
+			margin: 0 5px;
+		}
+		#lib-list li span .fa,
+		#pl-savedlist span::before {
+			display: none;
+		}
+		#lib-list li {
+			line-height: 52px;
+		}
+		#lib-list .li1,
+		#pl-list .li1,
+		#pl-savedlist span,
+		.time {
+			font-size: 16px;
+			line-height: 19px;
+		}
+		#lib-list span.single,
+		#pl-list span.single {
+			padding-left: 0;
+		}
+		#lib-list .li2,
+		#pl-list .li2,
+		#pl-savedlist .li2	{
+			font-size: 12px;
+			line-height: 14px;
+		}
+		#lib-list .li2 {
+			line-height: 20px;
+		}
+		#biocontent img {
+			width: 33vw;
+		}
 	}
-	#lib-list span.single,
-	#pl-list span.single {
-		padding-left: 0;
+	@media ( max-width: 400px ) {
+		#button-settings {
+			right: 10px;
+		}
+		.content-top {
+			padding-right: 0;
+		}
+		#pl-manage i {
+			width: 37px;
+		}
 	}
-	#lib-list .li2,
-	#pl-list .li2,
-	#pl-savedlist .li2	{
-		font-size: 12px;
-		line-height: 14px;
+	@media ( max-width: 360px ) {
+		#playback-controls i {
+			margin: 0 3px;
+		}
+		#pl-manage i {
+			width: 36px;
+		}
 	}
-	#lib-list .li2 {
-		line-height: 20px;
+	@media ( max-width: 330px ) {
+		#playback-controls i {
+			margin: 0;
+		}
+		#button-pl-shuffle {
+			display: none;
+		}
+		#infoOverlay {
+			transform: scale( 0.9 );
+			transform-origin: top;
+			width: calc( 100% / 0.9 );
+			left: calc( -100% / 18 );
+		}
+		#infoOverlay.noscroll {
+			height: calc( 100% / 0.9 );
+		}
+		.radiomodetitle { display: none; }
 	}
-	#biocontent img {
-		width: 33vw;
-	}
-}
-@media( orientation: portrait ) and ( max-width: 400px ) {
-	#button-settings {
-		right: 10px;
-	}
-	.content-top {
-		padding-right: 0;
-	}
-	#pl-manage i {
-		width: 37px;
-	}
-}
-@media( orientation: portrait ) and ( max-width: 360px ) {
-	#playback-controls i {
-		margin: 0 3px;
-	}
-	#pl-manage i {
-		width: 36px;
-	}
-}
-@media( orientation: portrait ) and ( max-width: 330px ) {
-	#playback-controls i {
-		margin: 0;
-	}
-	#button-pl-shuffle {
-		display: none;
-	}
-	#infoOverlay {
-		transform: scale( 0.9 );
-		transform-origin: top;
-		width: calc( 100% / 0.9 );
-		left: calc( -100% / 18 );
-	}
-	#infoOverlay.noscroll {
-		height: calc( 100% / 0.9 );
-	}
-	.radiomodetitle { display: none; }
-}
-@media( orientation: portrait ) and ( max-width: 280px ) {
-	#sampling {
-		display: none;
-	}
-	#divcover {
-		min-width: auto;
+	@media ( max-width: 280px ) {
+		#sampling {
+			display: none;
+		}
+		#divcover {
+			min-width: auto;
+		}
 	}
 }
 /* 3.5" lcd */
