--- a/srv/http/assets/css/info.css
+++ b/srv/http/assets/css/info.css
@@ -289,6 +289,15 @@ hr {
 	height: 100px;
 	margin-bottom: 10px;
 }
+.infomessage .msg-l,
+.infomessage .msg-r {
+	display: inline-block;
+	vertical-align: middle;
+}
+.infomessage .msg-r {
+	margin-left: 30px;
+	text-align: left;
+}
 .infoimgnew {
 	margin-left: 10px;
 }
