--- a/srv/http/assets/css/selectric.css
+++ b/srv/http/assets/css/selectric.css
@@ -11,11 +11,11 @@
 .selectric-wrapper.disabled {
 	pointer-events: none;
 }
+.selectric-wrapper.disabled .label {
+	margin-right: 10px;
+}
 .selectric-wrapper.disabled .button {
 	display: none;
-}
-.selectric-responsive {
-	width: 100%;
 }
 .selectric {
 	border-radius: 4px;
@@ -31,10 +31,6 @@
 	overflow: hidden;
 	text-overflow: ellipsis;
 }
-.selectric .label,
-.selectric-items ul, .selectric-items li {
-	font-size: 15px;
-}
 .selectric .button {
 	position: absolute;
 	right: 0;
@@ -48,22 +44,6 @@
 .selectric .button:before {
 	content: '\25BE';
 }
-.selectric-disabled {
-	cursor: default;
-	-webkit-user-select: none;
-	 -moz-user-select: none;
-	  -ms-user-select: none;
-		  user-select: none;
-}
-.selectric-disabled .button {
-	display: none;
-}
-.selectric-hover .selectric .button {
-	color: #e6e6e6;
-}
-.selectric-hover .selectric .button:after {
-	border-top-color: #e6e6e6;
-}
 .selectric-open {
 	z-index: 9999;
 }
@@ -76,7 +56,6 @@
 	width: 0;
 	height: 0;
 }
-select,
 .selectric-hide-select select {
 	position: absolute;
 	left: -300%;
@@ -101,7 +80,6 @@ select,
 	visibility: hidden !important;
 	display: block !important;
 }
-/* Items box */
 .selectric-items {
 	display: none;
 	position: absolute;
@@ -121,7 +99,8 @@ select,
 	top: auto;
 	bottom: 100%;
 }
-.selectric-items ul, .selectric-items li {
+.selectric-items ul,
+.selectric-items li {
 	list-style: none;
 	padding: 0;
 	margin: 0;
@@ -142,30 +121,4 @@ select,
 }
 .selectric-items li:hover {
 	background: var( --cg );
-}
-.selectric-items .disabled {
-	filter: alpha(opacity=50);
-	opacity: 0.5;
-	cursor: default !important;
-	background: none !important;
-	-webkit-user-select: none;
-	 -moz-user-select: none;
-	  -ms-user-select: none;
-		  user-select: none;
-}
-.selectric-items .selectric-group .selectric-group-label {
-	padding-left: 10px;
-	cursor: default;
-	-webkit-user-select: none;
-	 -moz-user-select: none;
-	  -ms-user-select: none;
-		  user-select: none;
-	background: none;
-}
-.selectric-items .selectric-group.disabled li {
-	filter: alpha(opacity=100);
-	opacity: 1;
-}
-.selectric-items .selectric-group li {
-	padding-left: 25px;
 }
